--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-google-maps",
+  "name": "react-google-maps-tmp",
   "version": "9.4.5",
-  "description": "React.js Google Maps integration component",
+  "description": "Temporary React.js Google Maps integration component",
   "license": "MIT",
   "author": {
     "name": "tomchentw",
